fix sinottico defects

--- a/SinotticoBomMultilivelloReport/webapp/SinotticoBomMultilivelloReport/view/MainView.view.xml
+++ b/SinotticoBomMultilivelloReport/webapp/SinotticoBomMultilivelloReport/view/MainView.view.xml
@@ -75,7 +75,7 @@
                         <t:Column width="7%"  hAlign="Center">
                             <Label text="{i18n>SinotticoBomMultilivello.treeTable.defects}"/>
                             <t:template>
-                                <core:Icon src="sap-icon://high-priority" color="#ca0b30" visible="{= (${Defects>MissingParts} === 'true') ? true:false}" class="largeIcon" />
+                                <core:Icon src="sap-icon://high-priority" color="#ca0b30" visible="{= (${SinotticoBomModel>Defects} === 'true') ? true:false}" class="largeIcon" />
                             </t:template>
                         </t:Column>
                         <t:Column width="15%" sortProperty="ProgressStatus" hAlign="Center">
